# fastapi-pgroonga-demo

./: .dockeignore  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  main.py  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: check.yml  ci.yml
app/: main.py
app/api/: router.py
app/core/: config.py  router.py
app/core/container/: __init__.py
app/core/container/provider/: __init__.py  database.py  logger.py  repository.py
app/models/: __init__.py  base.py  item.py
app/repositories/: base.py  item.py
app/routes/: items.py
app/schemas/: item.py
docker/db/sql/: 00_init.sql
migrations/: env.py
migrations/versions/: 05f7d0d49fef_add_item_table.py  f0638a8df413_initial.py
tests/: conftest.py
tests/api/: conftest.py  test_router.py
tests/core/: test_config.py
tests/repositories/: test_item.py
tests/routes/: test_items.py  test_root.py
