[project]
name = "fastapi-pgroonga-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "dishka>=1.7.2",
    "fastapi[standard]>=0.120.2",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[postgresql-asyncpg]>=2.0.44",
]

[dependency-groups]
dev = [
    "gevent>=25.9.1",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "ruff>=0.14.2",
    "trio>=0.31.0",
]

[tool.pyright]
include = ["app"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportGeneralTypeIssues = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
concurrency = ["gevent"]

[tool.pytest_env]
ENV = "test"
